# ParserKN

./: LICENSE  MyTranslit.py  README.md  filter_list.py  main.py  programs_data.py  pyproject.toml
